# husky

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  CHANGE_LOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  README.md~  husky_electric.rosinstall  husky_fuerte.rosinstall  mainpage.dox  nav_rviz.vcg  outdoor_navigation_demo.launch  package.xml  stack.xml
husky_base/: CHANGELOG.rst  CMakeLists.txt  husky_base.xml  husky_hardware.xml  package.xml
husky_base/config/: diagnostics.yaml
husky_base/launch/: base.launch  base.launch.py  base_launch.py
husky_base/src/: horizon_legacy_wrapper.cpp  husky_base.cpp  husky_diagnostics.cpp  husky_hardware.cpp  husky_status.cpp
husky_bringup/: CHANGELOG.rst  CMakeLists.txt  app_manager.launch  mainpage.dox  manifest.xml  minimal.launch  package.xml
husky_bringup/apps/: husky_apps.installed
husky_bringup/cfg/: Husky.cfg
husky_bringup/config/: diagnostics.yaml  mag_config_default.yaml
husky_bringup/debian/: ros-indigo-husky-bringup.udev  udev
husky_bringup/env-hooks/: 50.husky_find_mag_config.sh
husky_bringup/launch/: accessories.launch  accessories.launch.py  accessories_launch.py
husky_bringup/nodes/: dead_reckoning.py  diagnostics.py
husky_bringup/scripts/: calibrate_compass  compute_calibration  install
husky_bringup/src/: .gitignore
husky_bringup/test/: husky.launch
husky_bringup/udev/: 10-microstrain.rules  41-clearpath.rules  41-logitech.rules  52-ftdi.rules  README.md  clearpath.rules  hokuyo.rules  prolific.rules
husky_bringup/upstart/: helpers.bash  install.bash  job.conf  mklaunch  start  stop
husky_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
husky_control/config/: cmd_vel_mux.yaml  control.yaml  control_flir_ptu.yaml  control_gripper.yaml  control_left_ur5.yaml  control_right_ur5.yaml  control_ur5.yaml  empty.yaml  gazebo_interface.yaml  imu_filter.yaml  localization.yaml  localization_map.yaml  localization_odom.yaml  navsat_transform.yaml  navsat_transform_sim.yaml  public_interface.yaml  teleop.yaml  teleop_interactive_markers.yaml  teleop_logitech.yaml  teleop_ps4.yaml  twist_mux.yaml
husky_control/launch/: control.launch  control.launch.py  control_launch.py  teleop.launch  teleop_base.launch.py  teleop_joy_launch.py  teleop_keyboard.launch  teleop_launch.py
husky_control/scripts/: LICENSE  set_dual_ur5_gazebo_config  stow_ur5_left  stow_ur5_right  teleop_keyboard.py
husky_description/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
husky_description/env-hooks/: 50.husky_description.sh
husky_description/etc/: view_robot.rviz
husky_description/launch/: base.urdf.gazebo.launch  base.urdf.gazebo_prefuerte.launch  base.urdf.rviz.launch  description.launch  description.launch.py  description_launch.py  map_empty.launch  map_empty_prefuerte.launch  urdf_view.rviz  view_description.launch
husky_description/meshes/: base_link.dae  bracket_extension_20.stl  bracket_extension_40.stl  bracket_extension_60.stl  bracket_extension_80.stl  bracket_horizontal.stl  bracket_horizontal_large.stl  bracket_vertical.stl  bumper.dae  bumper_extension.dae  bumper_extension.stl  dual_arm_bulkhead.dae  large_top_plate.dae  large_top_plate_collision.stl  pacs_full_riser.stl  pacs_partial_riser.stl  pacs_top_plate.stl  top_chassis.dae  top_plate.dae  top_plate.stl  user_rail.dae  wheel.dae
husky_description/src/: husky_controller.cpp  husky_plugin.cpp
husky_description/tests/: roslaunch_test_lms1xx.xml  roslaunch_test_plain.xml  roslaunch_test_ust10.xml
husky_description/urdf/: accessories.urdf.xacro  base.urdf.xacro  base.urdf_prefuerte.xacro  decorations.urdf.xacro  description.xacro  description.xacro.save  dual_arm_husky.urdf  dual_arm_husky.urdf.xacro  dual_arm_husky.urdf.xacro.save  empty.urdf  generate_dual_arm_husky_urdf.sh  husky.urdf.xacro  husky.urdf.xacro.save  husky.urdf.xacro.save.1  husky_macro.urdf.xacro  materials.urdf  materials.urdf.xacro  pacs.urdf.xacro  parts.urdf.xacro  sudo  wheel.urdf.xacro
husky_description/worlds/: empty.world  empty_prefuerte.world
husky_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
husky_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
husky_gazebo/env-hooks/: 50.husky_gazebo.sh
husky_gazebo/launch/: empty_world.launch  gazebo.launch.py  gazebo_launch.py  husky_empty_world.launch  husky_playpen.launch  husky_playpen.launch.py  kinect.launch  multi_husky_playpen.launch  playpen.launch  realsense.launch  spawn_husky.launch
husky_gazebo/urdf/: description.gazebo.xacro  husky.gazebo.xacro
husky_gazebo/worlds/: clearpath_playpen.world
husky_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
husky_msgs/msg/: HuskyStatus.msg
husky_navigation/: CHANGELOG.rst  CMakeLists.txt  amcl_demo.launch  manifest.xml  package.xml
husky_navigation/config/: costmap_common.yaml  costmap_common_params.yaml  costmap_exploration.yaml  costmap_global_laser.yaml  dual_ur5_laser_filter.yaml  global_costmap_params.yaml  gmapping_husky.launch  local_costmap_params.yaml  planner.yaml
husky_navigation/laser/: costmap_common_params.yaml  laser_gmapping_demo.launch
husky_navigation/launch/: amcl.launch  amcl_demo.launch  dual_ur5_laser_filter.launch  exploration.launch  exploration_demo.launch  gmapping.launch  gmapping_demo.launch  hector_slam.launch  hector_slam_demo.launch  move_base.launch  move_base_mapless_demo.launch  pointcloud_to_laserscan.launch
husky_navigation/maps/: playpen_map.yaml  willow-2010-02-18-0.10.pgm  willow-2010-02-18-0.10.yaml
husky_navigation/src/: auto_drive.py
husky_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
husky_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
husky_ur5_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
husky_ur5_moveit_config/config/: fake_controllers.yaml  husky_ur5.srdf  kinematics.yaml  padding.yaml  sensors_rgbd.yaml  sim_controllers.yaml
husky_ur5_moveit_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  (+9 more)
husky_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+341 files in other folders)
