<?xml version="1.0"?>
<package>
  <name>husky_msgs</name>
  <version>0.0.0</version>
  <description>Messages exclusive to Husky, mainly diagnostics related.</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/husky_msgs</url>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
