<?xml version="1.0"?>
<package>
  <name>husky_base</name>
  <version>0.2.6</version>
  <description>Clearpath Husky robot driver</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_base</url>
  <url type="bugtracker">https://github.com/husky/husky_robot/issues</url>
  <url type="repository">https://github.com/husky/husky_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>husky_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>husky_msgs</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>topic_tools</run_depend>

  <export></export>
</package>
