<?xml version="1.0"?>
<package>
  <name>husky_bringup</name>
  <version>0.4.8</version>
  <description>Clearpath Husky installation and integration package</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_bringup</url>
  <url type="bugtracker">https://github.com/husky/husky_robot/issues</url>
  <url type="repository">https://github.com/husky/husky_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>husky_base</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>imu_filter_madgwick</run_depend>
  <run_depend>imu_transformer</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>
  <run_depend>microstrain_mips</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>realsense2_camera</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_upstart</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>um6</run_depend>
  <run_depend>um7</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>

  <export>
  </export>
</package>
