<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>husky_bringup</name>
  <version>1.0.7</version>
  <description>Clearpath Husky installation and integration package</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_bringup</url>
  <url type="bugtracker">https://github.com/husky/husky_robot/issues</url>
  <url type="repository">https://github.com/husky/husky_robot</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>husky_base</exec_depend>
  <exec_depend>husky_control</exec_depend>
  <exec_depend>husky_description</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <!-- nmea_navsat_driver has not been released yet -->
  <!-- <exec_depend>nmea_navsat_driver</exec_depend> -->
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>