<?xml version="1.0"?>
<package>
  <name>husky_control</name>
  <version>0.4.5</version>
  <description>Clearpath Husky controller configurations</description>

  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_control</url>
  <url type="bugtracker">https://github.com/husky/husky/issues</url>
  <url type="repository">https://github.com/husky/husky</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>husky_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
