<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>husky_control</name>
  <version>1.0.8</version>
  <description>Clearpath Husky controller configurations</description>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>husky_description</depend>
  <!-- <depend>imu_filter_madgwick</depend> -->
  <depend>interactive_marker_twist_server</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joy</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
