<?xml version="1.0"?>
<package>
  <name>husky_description</name>
  <version>0.6.5</version>
  <description>Clearpath Husky URDF description</description>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
  <author email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <url type="website">http://ros.org/wiki/husky_description</url>
  <url type="bugtracker">https://github.com/husky/husky/issues</url>
  <url type="repository">https://github.com/husky/husky</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>fath_pivot_mount_description</run_depend>
  <run_depend>flir_camera_description</run_depend>
  <run_depend>realsense2_description</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>velodyne_description</run_depend>

  <export>
  </export>
</package>
