<?xml version="1.0"?>
<package>
  <name>husky_desktop</name>
  <version>0.4.4</version>
  <description>Metapackage for Clearpath Husky visualization software</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_desktop</url>
  <url type="bugtracker">https://github.com/husky/husky_desktop/issues</url>
  <url type="repository">https://github.com/husky/husky_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_viz</run_depend>
  <run_depend>husky_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
