<?xml version="1.0"?>
<package format="2">
  <name>husky_gazebo</name>
  <version>0.6.4</version>
  <description>Clearpath Husky Simulator bringup</description>

  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
  <author email="pmukherj@clearpathrobotics.com">Prasenjit Mukherjee</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_gazebo</url>
  <url type="bugtracker">https://github.com/husky/husky_simulator/issues</url>
  <url type="repository">https://github.com/husky/husky_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>husky_control</exec_depend>
  <exec_depend>husky_description</exec_depend>
  <!-- <exec_depend>multimaster_launch</exec_depend> -->
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  
  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
