<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husky_robot</name>
  <version>1.0.8</version>
  <description>Metapackage for Clearpath Husky robot software</description>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>husky_base</exec_depend>
  <exec_depend>husky_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
