<?xml version="1.0"?>
<package>
  <name>husky_simulator</name>
  <version>0.6.5</version>
  <description>Metapackage for Clearpath Husky simulation software</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/husky_simulator</url>
  <url type="bugtracker">https://github.com/husky/husky_simulator/issues</url>
  <url type="repository">https://github.com/husky/husky_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
